--- a/app/src/main/res/layout/fragment_review_main.xml
+++ b/app/src/main/res/layout/fragment_review_main.xml
@@ -97,6 +97,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="end"
 
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:elevation="1dp"
             >
 
             <Button
