--- a/app/src/main/res/layout/item_navi_question.xml
+++ b/app/src/main/res/layout/item_navi_question.xml
@@ -13,71 +13,102 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/navi_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/navi_items"
         android:background="#fff"
         >
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="리뷰를 올려보세요"
+            android:id="@+id/navi_text_titlebar"
+            android:textColor="#000"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="20dp"
+
+            android:textSize="18sp"
+
+            />
 
         <EditText
             android:id="@+id/navi_text_title"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="50dp"
-            android:hint="Title"
-            android:background="@drawable/btn_bg"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:hint="제목을 입력해주세요"
             android:textColor="#000"
-            android:textColorHint="#000"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp"
-            app:layout_constraintBottom_toTopOf="@id/navi_img"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textColorHint="#BFBFBF"
+            android:background="@drawable/btn_grey_border"
             app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center_horizontal|center_vertical"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/navi_text_titlebar"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            >
+            <requestFocus/>
+
+        </EditText>
 
         <ImageView
             android:id="@+id/navi_img"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:background="@drawable/btn_bg"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/navi_text_title"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:layout_marginTop="15dp"
+            android:background="@drawable/btn_grey_border"
+            android:padding="6dp"
             android:onClick="@{onClickListener::onClick}"
             android:src="@drawable/ic_launcher_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/navi_text_title"
+            android:layout_marginStart="45dp"
+            android:layout_marginEnd="45dp"
             app:layout_constraintBottom_toTopOf="@id/navi_txt_question"
             />
 
         <EditText
             android:id="@+id/navi_txt_question"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="50dp"
-            android:hint="question"
-            android:textColor="#000"
-            android:background="@drawable/btn_bg"
-            android:textColorHint="#000"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/navi_img"
-            android:gravity="center"
             android:layout_marginTop="15dp"
+            android:background="@drawable/btn_grey_border"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:hint="한줄평"
+            android:textColor="#000"
+            android:textColorHint="#BFBFBF"
             app:layout_constraintBottom_toTopOf="@id/navi_btn_register"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/navi_img"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            >
+            <requestFocus/>
+        </EditText>
 
         <Button
             android:id="@+id/navi_btn_register"
-            android:text="등록"
-            android:onClick="@{onClickListener::onClick}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="#fff"
-            app:layout_constraintTop_toBottomOf="@id/navi_txt_question"
-            android:layout_width="200dp"
-            android:background="#000"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/btn_color_border"
+            android:onClick="@{onClickListener::onClick}"
+            android:text="등록"
+            android:textColor="#fff"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/navi_txt_question"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             />
 
         <View
@@ -86,12 +117,14 @@
             android:background="#000"
             app:layout_constraintStart_toStartOf="parent"
             />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="#000"
             app:layout_constraintTop_toTopOf="parent"
             />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
