--- a/app/src/main/res/drawable/horizontal_title.xml
+++ b/app/src/main/res/drawable/horizontal_title.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <gradient android:startColor="#D8F0E3"
-              android:endColor="#93C6B5"
-              android:angle="180" />
+    <gradient android:startColor="#13A9AA"
+              android:endColor="#7BA6AA"
+              android:angle="360" />
     <!--<corners android:radius="3dp" />-->
     <!--<stroke android:width="3dp" android:color="#000" />-->
 </shape>
