--- a/app/src/main/res/layout/item_navi_question.xml
+++ b/app/src/main/res/layout/item_navi_question.xml
@@ -29,7 +29,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="20dp"
-
+            app:layout_constraintBottom_toTopOf="@id/navi_text_title"
             android:textSize="18sp"
 
             />
@@ -51,7 +51,6 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             >
-            <requestFocus/>
 
         </EditText>
 
@@ -90,7 +89,6 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             >
-            <requestFocus/>
         </EditText>
 
         <Button
@@ -110,29 +108,6 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             />
-
-        <View
-            android:layout_width="3dp"
-            android:layout_height="match_parent"
-            android:background="#000"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="#000"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="#000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-
     </android.support.constraint.ConstraintLayout>
 
 </layout>
