--- a/app/src/main/res/drawable/btn_grey_border.xml
+++ b/app/src/main/res/drawable/btn_grey_border.xml
@@ -5,5 +5,5 @@
               android:endColor="#ffffff"
               android:angle="270" />
     <corners android:radius="5dp" />
-    <stroke android:width="1dp" android:color="#D8D8D8" />
+    <stroke android:width="1dp" android:color="#f4f4f4" />
 </shape>
