--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -28,6 +28,9 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="로그아웃"
+            android:textColor="#fff"
+            android:textSize="15sp"
+            android:background="@drawable/btn_color_border"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
